3d adde d UI fixed

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "opentype.js": "^1.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
